--- a/BruteForce/Base.lproj/Main.storyboard
+++ b/BruteForce/Base.lproj/Main.storyboard
@@ -50,6 +50,24 @@
                                     <action selector="generateClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cVx-rM-G5i"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUQ-Y2-WlY">
+                                <rect key="frame" x="104" y="515" width="207" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Change Background">
+                                            <attributes>
+                                                <font key="NSFont" size="20" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="changeBackground:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KLX-64-RDF"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFv-zm-AAZ">
                                 <rect key="frame" x="166" y="368" width="100" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -64,6 +82,7 @@
                     <connections>
                         <outlet property="activityIndicator" destination="G5I-Au-Glt" id="TNL-fs-Cbp"/>
                         <outlet property="bruteButton" destination="IEF-wL-lQq" id="85c-e8-OV3"/>
+                        <outlet property="changeBackground" destination="TUQ-Y2-WlY" id="qqB-i9-56E"/>
                         <outlet property="generateButton" destination="LPR-pF-Q0h" id="QlJ-k4-A9C"/>
                         <outlet property="label" destination="lFv-zm-AAZ" id="Mk5-6V-0Nl"/>
                         <outlet property="textField" destination="XXF-iW-LfQ" id="uS1-n0-ba5"/>
